# parcel

./: CMakeLists.txt  README.md  main.cpp
include/: block_head.hpp  parcel_stl.hpp  static_allocator.hpp  stl_extension.hpp
include/detail/: blocks.hpp  compiler_macros.h
include/parcel/detail/: blocks.hpp
include/util/: launder_cast.hpp  passert.h  resize.hpp
parcel/: CMakeLists.txt
parcel/include/: heap.hpp
parcel/include/detail/: types.hpp
parcel/include/util/: cttypeid.hpp  resize.hpp
